syntax = "proto3";

package user.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";

option go_package = "bt_auth/pkg/user/v1; user_v1";

service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/v1/user"
      body: "info"
    };
  };
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/v1/user"
    };
  };
  rpc Update(UpdateRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/v1/user"
      body: "*"
    };
  };
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/v1/user"
    };
  };
}

enum Role {
  user = 0;
  admin = 1;
}

message UserInfo {
  string name = 1 [(validate.rules).string.min_len = 1, (validate.rules).string.max_len = 100];
  string email = 2 [(validate.rules).string.email = true, (validate.rules).string.min_len = 5, (validate.rules).string.max_len = 100];
  string password = 3 [(validate.rules).string.min_len = 8];
  string password_confirm = 4 [(validate.rules).string.min_len = 8];
  Role role = 5;
}

message User {
  int64 id = 1;
  UserInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
  UserInfo info = 1 [(validate.rules).message.required = true];
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
  google.protobuf.StringValue name = 2 [(validate.rules).string.min_len = 1];
  google.protobuf.StringValue email = 3 [(validate.rules).string.email = true];
}

message DeleteRequest {
  int64 id = 1 [(validate.rules).int64.gt = 0];
}
